--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
     "@stripe/stripe-react-native": "^0.4.0",
-    "@supabase/supabase-js": "^1.31.1",
+    "@supabase/supabase-js": "^1.32.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
@@ -32,5 +32,8 @@
     "@types/react-test-renderer": "^17.0.1",
     "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "react-devtools-core": "4.14.0"
+  }
 }
