feat: many improvements.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# Supabase API keys - see https://app.supabase.io/project/_/settings/api
-SUPABASE_URL=https://project.supabase.co
-SUPABASE_ANON_KEY=xxx.yyyy.zzz
+# Supabase API keys not needed as they are injected via the CLI
 
 # Stripe API keys - see https://stripe.com/docs/development/quickstart#api-keys
 STRIPE_PUBLISHABLE_KEY=pk_test
