--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.0",
     "@stripe/stripe-react-native": "^0.4.0",
     "@supabase/supabase-js": "^1.33.1",
+    "dotenv": "^16.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
