--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.0",
-    "@stripe/stripe-react-native": "^0.4.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@stripe/stripe-react-native": "0.2.3",
     "@supabase/supabase-js": "^1.33.1",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
@@ -20,7 +20,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.2.2",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "0.17.1"
   },
